Add prettier configuration

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:format": "npx prettier --write .",
+    "prettier:check": "npx prettier --check ."
   },
   "dependencies": {
     "next": "12.2.5",
@@ -19,6 +21,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "prettier": "2.7.1",
     "typescript": "4.7.4"
   }
 }
