--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# yarn local cache
+/.yarn
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
-# yarn
-/.yarn
 
 # testing
 /coverage
