--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
     "@next/font": "latest",
     "next": "latest",
     "react": "latest",
