--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@next/font": "latest",
-    "next": "latest",
+    "next": "^13.4.0",
     "react": "latest",
     "react-dom": "latest"
   },
